# idea-monorepo-setup

./: README.md  TICKETS.md  makefile  pyproject.toml
.junie/: guidelines.md
docs/: project_structure.md
examples/monorepo-example/: docker-compose.yml
examples/monorepo-example/non-python-service/: Dockerfile
examples/monorepo-example/service1/: Dockerfile  requirements.txt
examples/monorepo-example/service1/src/service1/: __init__.py
examples/monorepo-example/service2/: Dockerfile  requirements.txt
examples/monorepo-example/service2/src/service2/: __init__.py
src/idea_monorepo_setup/: __init__.py  cli.py  config.py  exceptions.py
src/idea_monorepo_setup/utils/: log.py  validation.py
tests/: conftest.py  test_config.py
tests/fixtures/: Dockerfile.python  docker-compose.yml
tests/fixtures/idea/: misc.xml
tests/utils/: test_validation.py
