[project]
name = "idea-monorepo-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Hoburg", email = "peterHoburg@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ims = "idea_monorepo_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "inline-snapshot>=0.23.2",
    "pre-commit>=4.2.0",
    "pyrefly>=0.19.0",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a8",
    "typeguard>=4.4.3",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "D105",
    "D400",
    "D401",
    "D415",

    "D203",
    "D213",

    "COM812",
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",
    "ANN001",
    "ANN201",
    "S101",
    "T201",
]
"alembic/**" = [
    "INP001",
    "ERA001",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
typeguard-packages = """
idea_monorepo_setup
"""
typeguard-debug-instrumentation = true
typeguard-collection-check-strategy = "ALL_ITEMS"

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

